# HorizonTrackingTools

./: .gitignore  LICENSE  README.md  build.bat  build_run.bat
cSharpRunExampleProject/ConsoleApp1/: AutoCorrelationTests.cs  BuildCorObjTests.cs  ConsoleApp1.csproj  ConsoleApp1.sln  Program.cs
cSharpRunExampleProject/FotiadiMath/: DataForMetricConvolutionWithShift.cs  FotiadiMath.csproj  FotiadiMath.sln  FotiadiMathWrapper.cs
cSharpRunExampleProject/FotiadiMathUnitTests/: BuildCorObjTests.cs  FotiadiMathUnitTests.csproj  TestData.cs  TestProgressReporter.cs  UnitTest1.cs
exampleInversionPluginNew/: CMakeLists.txt  CMakeSettings.json
exampleInversionPluginNew/includes/: common.h  inversionplugininterfaces.h  pluginprogressreporterinterface.h  plugintabletdatainterface.h
exampleInversionPluginNew/src/: AppSettings.h  FileSaverHelper.cpp  FileSaverHelper.h  FotiadiConnector.cpp  FotiadiConnector.h  FotiadiMathFunctions.h  FotiadiMathReturnCodes.h  PathHelper.cpp  PathHelper.h  ex1form.ui  ex2form.ui  exampleinversionplugin.cpp  exampleinversionplugin.h
pythonProject/: SpanningTree.py  ZhekovskysDiagram.py  traceSignals.py
src/: Doxyfile  FotiadiMath.sln
src/BasicAlg.share/: BasicAlg.share.vcxitems  basic_alg.cpp  basic_alg.h  graph_alg.h  std_alg.h
src/BasicAlg.test/: BasicAlg.test.vcxproj  FilterWindowAvg.cpp  binary_search.test.cpp  graph_alg.test.cpp
src/Docs/: Doxyfile_Instruction.txt
src/FotiadiMath.linux/: FotiadiMath.linux.vcxproj
src/FotiadiMath.share/: AdjacencyListUnit.h  ArgumentIllegalException.h  CoordinatesAtCube3d.h  CoordinatesInCube.cpp  CoordinatesInCube.h  CoordinatesInCubeWithIdWhereTraceStatrs.h  CorrelationDataShare.cpp  CorrelationDataShare.h  DataToFillGraphPoints.h  Edge.h  FotiadiMath.share.vcxitems  FotiadiMath.share.vcxitems.filters  HorizonWrapper.cpp  HorizonWrapper.h  MainAndOtherPointsData.cpp  MainAndOtherPointsData.h  NotImplementedException.h  Point3DSimilarityHelper.cpp  Point3DSimilarityHelper.h  PrimSpanningTree.cpp  PrimSpanningTree.h  ReflectingHorizonDefiner.cpp  ReflectingHorizonDefiner.h  ReflectingHorizonDefinerForEntireTrace.cpp  ReflectingHorizonDefinerForEntireTrace.h  S3DEdge.cpp  (+25 more)
(+299 files in other folders)
